Corrigiendo ruta de servicio y actualizando swagger
