# routers/commentsRouter_controllers.go
@@ -63,6 +63,15 @@ func init() {
 
     beego.GlobalControllerRouter["github.com/udistrital/ss_mid_api/controllers:PagoController"] = append(beego.GlobalControllerRouter["github.com/udistrital/ss_mid_api/controllers:PagoController"],
         beego.ControllerComments{
+            Method: "CalcularSegSocialHonorarios",
+            Router: `/CalcularSegSocialHonorarios/:idPreliquidacion`,
+            AllowHTTPMethods: []string{"get"},
+            MethodParams: param.Make(),
+            Filters: nil,
+            Params: nil})
+
+    beego.GlobalControllerRouter["github.com/udistrital/ss_mid_api/controllers:PagoController"] = append(beego.GlobalControllerRouter["github.com/udistrital/ss_mid_api/controllers:PagoController"],
+        beego.ControllerComments{
             Method: "ConceptosIbc",
             Router: `/ConceptosIbc/`,
             AllowHTTPMethods: []string{"get"},
@@ -101,15 +110,6 @@ func init() {
         beego.ControllerComments{
             Method: "SumarPagosSalud",
             Router: `/SumarPagosSalud/:idPeriodoPago`,
-            AllowHTTPMethods: []string{"get"},
-            MethodParams: param.Make(),
-            Filters: nil,
-            Params: nil})
-
-    beego.GlobalControllerRouter["github.com/udistrital/ss_mid_api/controllers:PagoController"] = append(beego.GlobalControllerRouter["github.com/udistrital/ss_mid_api/controllers:PagoController"],
-        beego.ControllerComments{
-            Method: "CalcularSegSocialHonorarios",
-            Router: `CalcularSegSocialHonorarios/:idPreliquidacion`,
             AllowHTTPMethods: []string{"get"},
             MethodParams: param.Make(),
             Filters: nil,
